--- a/css/main.css
+++ b/css/main.css
@@ -187,3 +187,162 @@
     margin-top: -46%; }
   .learn-intro-section .caption h1 {
     padding-top: 4%; } }
+
+#coworking-carousel.coworking-section {
+  height: 100%;
+  /* padding-top: 150px; */
+  text-align: center;
+  background: black; }
+
+#coworking-carousel .bg-img {
+  background: url(img/bg.jpg) no-repeat top center fixed;
+  background-color: #000000;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+  height: 100%;
+  width: 100%;
+  display: none; }
+  #coworking-carousel .bg-img.active {
+    display: block;
+    -webkit-animation: fadein 1s;
+    /* Safari, Chrome and Opera > 12.1 */
+    -moz-animation: fadein 1s;
+    /* Firefox < 16 */
+    -ms-animation: fadein 1s;
+    /* Internet Explorer */
+    -o-animation: fadein 1s;
+    /* Opera < 12.1 */
+    animation: fadein 1s; }
+
+#coworking-carousel .caption {
+  position: Absolute;
+  top: 270px;
+  z-index: 2;
+  left: 0;
+  -webkit-animation: fadein 2s;
+  /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 2s;
+  /* Firefox < 16 */
+  -ms-animation: fadein 2s;
+  /* Internet Explorer */
+  -o-animation: fadein 2s;
+  /* Opera < 12.1 */
+  animation: fadein 2s; }
+  #coworking-carousel .caption h1 {
+    color: white;
+    text-shadow: 0px 0px 11px #969696;
+    width: 100%;
+    margin: 0 auto; }
+  #coworking-carousel .caption a {
+    background-color: #ff6633;
+    font-family: "Noodle";
+    width: 250px;
+    border-radius: 0px;
+    font-size: 2.1em;
+    color: #333333;
+    margin-top: 12px; }
+
+#community-stories {
+  cursor: pointer;
+  padding-bottom: 60px;
+  position: relative;
+  background: url(img/bg-about.jpg) no-repeat top center;
+  background-color: #fb8d62; }
+  #community-stories h1 {
+    font-size: 3em; }
+  #community-stories .comm-content {
+    position: relative; }
+  #community-stories .com-container {
+    margin: 0 auto;
+    display: block;
+    float: none; }
+  #community-stories .pink-overlay {
+    background-color: #ff6633;
+    opacity: 0.5;
+    position: absolute;
+    width: 100%;
+    height: 100%; }
+  #community-stories .glyphicon-play {
+    position: absolute;
+    z-index: 1;
+    left: 39%;
+    top: 33%;
+    color: white;
+    border: 1px solid white;
+    border-radius: 50px;
+    width: 72px;
+    font-size: 43px;
+    padding: 15px; }
+  #community-stories h5 {
+    z-index: 9;
+    position: absolute;
+    bottom: 12%;
+    left: 23%;
+    font-size: 32px;
+    color: white;
+    font-family: 'Roboto Slab', serif; }
+  #community-stories .comm-image {
+    height: 280px;
+    width: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position-y: center; }
+
+.rates-row {
+  display: block;
+  float: none;
+  margin: 0 auto; }
+
+@-webkit-keyframes fade {
+  0% {
+    opacity: 0; }
+  20% {
+    opacity: 1; }
+  33% {
+    opacity: 1; }
+  53% {
+    opacity: 0; }
+  100% {
+    opacity: 0; } }
+
+@keyframes fade {
+  0% {
+    opacity: 0; }
+  20% {
+    opacity: 1; }
+  33% {
+    opacity: 1; }
+  53% {
+    opacity: 0; }
+  100% {
+    opacity: 0; } }
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
