--- a/sass/learning.scss
+++ b/sass/learning.scss
@@ -6,18 +6,28 @@
     background: #fff;
 padding-top:0px;
 video{
-  width:auto;
-  height:106%;
-  position:absolute;
-  left:0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    transform: translateX(-50%) translateY(-50%);
 }
 .video-overlay{
     position: absolute;
     background-color: #3e3e3e;
-    z-index: 1;
-    width: 106%;
-    height: 106%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    transform: translateX(-50%) translateY(-50%);
     opacity: 0.7;
+    z-index:1;
 }
 .caption{
     
@@ -198,27 +208,23 @@ h5{
         width:100% !important;
     }
 }
-
+video{
+    width:100%;
+}
+.video-overlay{
+    display:none; 
+    }
     .form-wrapper{
         padding:0px;
     }
 .learn-intro-section{
     background-color:#333;
-    video{
-        width:100%;
-    margin-top: -50%;
-    }
-    .video-overlay{
-   
-    width: 100%;
-    height: 100%;
-
-
-}
+ 
     .caption{
  h1{
     padding-top:11%;
     }
+    
  
 }
 }
@@ -226,10 +232,11 @@ h5{
 @media (max-width:320px) {
     
 .learn-intro-section{
-  
-    video{
-        width:100%;
-    margin-top: -46%;
+  video{
+      width:100%;
+  }
+    .video-overlay{
+    display:none; 
     }
 .caption{
 h1{
