--- a/css/main.css
+++ b/css/main.css
@@ -178,6 +178,8 @@
 @media (max-width: 768px) {
   .modal iframe {
     width: 100% !important; }
+  video {
+    width: 100%; }
   .video-overlay {
     display: none; }
   .form-wrapper {
@@ -188,10 +190,16 @@
       padding-top: 11%; } }
 
 @media (max-width: 320px) {
+  .learn-intro-section video {
+    width: 100%; }
   .learn-intro-section .video-overlay {
     display: none; }
   .learn-intro-section .caption h1 {
     padding-top: 4%; } }
+
+.img-sale {
+  max-width: 50%;
+  margin-bottom: 30px; }
 
 #coworking-carousel.coworking-section {
   height: 100%;
@@ -351,3 +359,8 @@
     opacity: 0; }
   to {
     opacity: 1; } }
+
+@media (max-width: 480px) {
+  .img-sale {
+    max-width: 100%;
+    margin-bottom: 30px; } }
