--- a/sass/coworking.scss
+++ b/sass/coworking.scss
@@ -1,3 +1,7 @@
+.img-sale{
+    max-width:50%;
+    margin-bottom:30px;
+}
 #coworking-carousel{
     &.coworking-section{
             height: 100%;
@@ -150,4 +154,14 @@ h5{
 @-o-keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
+}
+
+
+
+@media (max-width:480px) {
+    .img-sale{
+        max-width:100%;
+        margin-bottom:30px;
+    }
+
 }
