--- a/sass/learning.scss
+++ b/sass/learning.scss
@@ -59,7 +59,7 @@ video{
   }
 
   .contact-section{
-          background: url(img/bg-about.jpg) no-repeat top center;
+          background: url(img/bg-about.jpg)  top center;
     background-color: #fb8d62;
     padding-top: 3%;
     padding-bottom: 10%;
