--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ ul.nav a.active {
 
 #about
 {
-  background: url("img/bg-about.jpg") no-repeat top center;
+  background: url("img/bg-about.jpg")  top center;
   background-color: #ff6633;
 }
 
@@ -300,7 +300,7 @@ text-decoration:none;
 }
 
 #contact {
-  background: url("img/bg-about.jpg") no-repeat top center;
+  background: url("img/bg-about.jpg") top center;
   background-color: #fb8d62;
   padding-top: 5%;
   padding-bottom: 10%;
