--- a/css/main.css
+++ b/css/main.css
@@ -58,18 +58,20 @@
   padding-top: 3%;
   padding-bottom: 10%; }
   .contact-section h3 {
-    font-weight: bold; }
+    font-family: "Noodle";
+    font-size: 3em; }
   .contact-section h4 {
     margin-bottom: 40px; }
 
 .people-section {
   background: url(img/whitebg.jpg);
-  padding-top: 10%;
+  padding-top: 3%;
   padding-bottom: 6%; }
   .people-section h3 {
     font-weight: bold;
     text-align: center;
-    margin-bottom: 40px; }
+    margin-bottom: 40px;
+    font-family: "Noodle"; }
 
 .form-wrapper {
   padding: 0 72px; }
@@ -256,11 +258,6 @@
     font-size: 2.1em;
     color: #333333;
     margin-top: 12px; }
-
-.social-media-links {
-  position: fixed;
-  bottom: 22px;
-  right: 40px; }
 
 #community-stories {
   cursor: pointer;
