--- a/sass/learning.scss
+++ b/sass/learning.scss
@@ -64,8 +64,9 @@ video{
     padding-top: 3%;
     padding-bottom: 10%;
     h3{
-        font-weight: bold;
-       
+       // font-weight: bold;
+       font-family:"Noodle";
+       font-size: 3em;
     }
     h4{
         margin-bottom:40px;
@@ -73,13 +74,14 @@ video{
   }
 .people-section{
         background: url(img/whitebg.jpg);
-       padding-top: 10%;
+       padding-top:3%;
     padding-bottom: 6%;
      h3{
         font-weight: bold;
         text-align:center;
         margin-bottom:40px;
-
+        font-family:"Noodle";
+        font-size: 3em;
     }
 }
 
