--- a/css/main.css
+++ b/css/main.css
@@ -71,7 +71,8 @@
     font-weight: bold;
     text-align: center;
     margin-bottom: 40px;
-    font-family: "Noodle"; }
+    font-family: "Noodle";
+    font-size: 3em; }
 
 .form-wrapper {
   padding: 0 72px; }
@@ -378,3 +379,37 @@
   .img-sale {
     max-width: 100%;
     margin-bottom: 30px; } }
+
+.hackathons .thumbnail {
+  font-family: "Noodle";
+  padding: 0px;
+  border-radius: 0px; }
+  .hackathons .thumbnail .caption {
+    padding: 9px 15px; }
+    .hackathons .thumbnail .caption h3 {
+      margin-top: 0px;
+      margin-bottom: 2px;
+      text-align: left; }
+      .hackathons .thumbnail .caption h3 small {
+        color: #f14b1f; }
+    .hackathons .thumbnail .caption p {
+      text-align: left;
+      font-size: 16px;
+      color: #727171; }
+
+.services-section.events {
+  padding-top: 0px; }
+  .services-section.events h2 {
+    font-family: "noodle"; }
+
+.contact-float {
+  position: fixed;
+  bottom: 22px;
+  left: 40px;
+  z-index: 99999; }
+
+@media (max-width: 720px) {
+  .contact-float {
+    left: 15px; }
+  .social-media-links {
+    right: 15px; } }
