--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/_variables.scss";
 @import"learning.scss";
 @import "coworking.scss";
+@import "events.scss";
 
