--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -34,7 +34,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <link href="https://fonts.googleapis.com/css?family=Roboto:500,700" rel="stylesheet">
     <link href='fonts/noodle.ttf'>
 
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="../favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="../assets/images/apple-touch-icon.png">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -144,6 +144,9 @@ height="0" width="0" ></iframe></noscript>
     <script src="../js/jquery.easing.min.js"></script>
     <script src="../js/scrolling-nav.js"></script>
 
+    <script src="../js/main.js"></script>
+    <script src="../js/coworking.js"></script>
+    <script src="../js/learn.js"></script>
 </body>
 
 </html>
