--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -62,7 +62,8 @@ height="0" width="0" ></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 
 {% include navheader.html %}
-<div class="blog bg-img" style="background-image: url(..{{page.imageUrl}})"></div>
+<div class="blog bg-img desktop-only" style="background-image: url(..{{page.imageUrl}})"></div>
+<img src="{{page.imageUrl}}" class="img-responsive mobile-only"/>
  <article class="container blog-content">
      <div class="col-xs-12 col-md-11">
             <h1>{{page.title}} </h1>
