updated meta tags

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -13,7 +13,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Builtable - Coworking Office Space, Meeting Rooms, Private Rooms and Events space in Shaw Boulevard Mandaluyong City, Metro Manila, Philippines">
+    <meta name="description" content="Builtable - Coworking Space, Office Space, Meeting Rooms, Private Rooms and Events space in Shaw Boulevard Mandaluyong City, Metro Manila, Philippines">
     <meta name="author" content="Builtable Coworking">
 
     <!-- For Facebook -->
@@ -30,7 +30,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 
 
-    <title>Builtable | Coworking Office Space in Philippines, Mandaluyong City</title>
+    <title>Builtable | Coworking Space and Office Space in Philippines, Mandaluyong City</title>
 
     
 
