--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -25,7 +25,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
        <!-- For Facebook -->
 <meta property="og:title" content="{{page.pageTitle}}" />
 <meta property="og:image" content="{{page.imageUrl}}" />
-<meta property="og:description" content="{{page.previewText}}" />
+<meta property="og:description" content="{{page.content | truncate: 195}}" />
 
 
 
