--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -20,7 +20,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta name="author" content="Builtable Coworking">
 
     <!-- For Facebook -->
-<meta property="og:title" content="Builtable Coworking's Website" />
+<meta property="og:title" content="Builtable - Coworking Space in Shaw Boulevard Mandaluyong, Metro Manila, Philippines" />
 <meta property="og:image" content="/assets/images/c1.jpg" />
 <meta property="og:image" content="/assets/images/c2.jpg" />
 <meta property="og:image" content="/assets/images/c3.jpg" />
@@ -29,7 +29,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <meta property="og:image" content="/assets/images/c6.jpg" />
 <meta property="og:image" content="/assets/images/c7.jpg" />
 <meta property="og:image" content="/assets/images/c8.jpg" />
-<meta property="og:description" content="Builtable - Coworking Space,    Office Space, Meeting Rooms, Private Rooms and Events space in Shaw Boulevard Mandaluyong City, Metro Manila, Philippines" />
+<meta property="og:description" content="Builtable - Coworking Space, Office Space, Meeting Rooms, Private Rooms and Events space in Shaw Boulevard Mandaluyong City, Metro Manila, Philippines" />
 
 
 
@@ -81,16 +81,7 @@ height="0" width="0" ></iframe></noscript>
     {% include footer.html %}
 
 
-    {% if site.url contains "builtable.co" %}
-    <script>
-        var Global_ENV = "production";
-</script>
-{% else %}
-
-<script>
-    var Global_ENV = "sandbox";
-</script>
-{% endif %}
+   
 
     <!-- jQuery -->
     <script src="../js/jquery.js"></script>
@@ -107,7 +98,7 @@ height="0" width="0" ></iframe></noscript>
     <script src="../js/main.js"></script>
     
     {% if page.url contains "/coworking/" %}
-    <script src="../js/coworking.js"></script>
+    <script src="../js/payment.js"></script>
     {% endif %}
     <script src="../js/learn.js"></script>
 </body>
