--- a/_includes/navheader.html
+++ b/_includes/navheader.html
@@ -24,7 +24,7 @@
                         <a class="page-scroll" href="/coworking">Coworking</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/comaking">Comaking</a>
+                        <a class="page-scroll" href="/comaking">Workshops</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="/events">Events</a>
