optimized some assets and styles

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -33,9 +33,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="../css/style.css" rel="stylesheet">
-    <link href="../css/scrolling-nav.css" rel="stylesheet">
-    <link href="../css/main.css" rel="stylesheet">
+    <!-- <link href="../css/style.css" rel="stylesheet">
+    <link href="../css/scrolling-nav.css" rel="stylesheet"> -->
+    <link href="../css/main.min.css" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <link href='fonts/noodle.ttf'>
