--- a/_includes/floating-hotkeys.html
+++ b/_includes/floating-hotkeys.html
@@ -1,26 +1,29 @@
 <div class="contact-float">
         
         <a href="tel:+639177270288">
-            <img src="../css/img/call.png" alt="contact logo"/>
+        <span class="ion-android-call"></span>    
         </a>
       
         <a href="mailto:marketing@builtable.co" >
-            <img src="../css/img/email.png" alt="email logo"/>
+            <span class="ion-ios-email"></span>
         </a>
       
     </div>
 
 <div class="social-media-links">
         <a href="https://www.facebook.com/builtable/" target="_blank">
-            <img src="../css/img/Facebook.png" alt="facebook logo round"/>
+            <span class="ion-social-facebook"></span>
         </a>
         <a href="https://www.linkedin.com/company/builtable-coworking/" target="_blank">
-            <img src="../css/img/LinkedIn.png" alt="Linkedin logo round"/>
+            <span class="ion-social-linkedin"></span>
         </a>
         <a href="https://www.instagram.com/explore/locations/167600830348313/builtable-coworking/" target="_blank">
-            <img src="../css/img/Instagram.png" alt="Instagram logo round"/>
+            <span class="ion-social-instagram"></span>
         </a>
         <a href="https://twitter.com/builtable" target="_blank">
-            <img src="../css/img/Twitter.png" alt="Twitter logo round"/>
+            <span class="ion-social-twitter"></span>
+        </a>
+        <a href="https://plus.google.com/u/1/116067517186130714947" target="_blank">
+            <span class="ion-social-googleplus"></span>
         </a>
 </div>
