--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -39,11 +39,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
-    <link href="../css/style.css" rel="stylesheet">
+    <!-- <link href="../css/style.css" rel="stylesheet"> -->
     <!-- Custom CSS -->
-    <link href="../css/scrolling-nav.css" rel="stylesheet">
-    
-    <link href="../css/main.css" rel="stylesheet">
+    <!-- <link href="../css/scrolling-nav.css" rel="stylesheet"> -->
+    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <link href="../css/main.min.css" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <link href='fonts/noodle.ttf'>
