added https to ionic

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -42,7 +42,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <!-- <link href="../css/style.css" rel="stylesheet"> -->
     <!-- Custom CSS -->
     <!-- <link href="../css/scrolling-nav.css" rel="stylesheet"> -->
-    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link href="../css/main.min.css" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
