--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -16,7 +16,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Builtable - Coworking Space, Office Space, Meeting Rooms, Private Rooms and Events space in Shaw Boulevard Mandaluyong City, Metro Manila, Philippines">
+    <meta name="description" content="Builtable PH - Coworking Space, Office Space, Meeting Rooms, Private Rooms and Events space in Shaw Boulevard Mandaluyong City, Metro Manila, Philippines">
     <meta name="author" content="Builtable Coworking">
 
     <!-- For Facebook -->
@@ -33,7 +33,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 
 
-    <title>Builtable | Coworking Space and Office Space in Philippines, Mandaluyong City</title>
+    <title>Builtable PH | Coworking Space and Office Space in Mandaluyong, Manila</title>
 
     
 
@@ -85,18 +85,13 @@ height="0" width="0" ></iframe></noscript>
 
     <!-- jQuery -->
     <script src="../js/jquery.js"></script>
-
     <!-- Bootstrap Core JavaScript -->
     <script src="../js/bootstrap.min.js"></script>
-
     <script src="https://www.paypalobjects.com/api/checkout.js"></script>
-    
     <!-- Scrolling Nav JavaScript -->
     <script src="../js/jquery.easing.min.js"></script>
     <script src="../js/scrolling-nav.js"></script>
-
     <script src="../js/main.js"></script>
-    
     {% if page.url contains "/coworking/" %}
     <script src="../js/payment.js"></script>
     {% endif %}
