fix text for bank deposit action

--- a/_layouts/workshop.html
+++ b/_layouts/workshop.html
@@ -101,7 +101,7 @@ height="0" width="0" ></iframe></noscript>
                   </li>
                   <li>Email to <a href="mailto:connect@builtable.co">connect@builtable.co</a> 
                     or <a href="https://m.facebook.com/messages/compose?ids=167600830348313" target="_new">FB Message</a> 
-                    s copy of the Bank Deposit Slip.</li>
+                    a copy of the Bank Deposit Slip.</li>
                   <li>Wait for our reply for the confirmation, and you're all set!</li>
 
                 </ol>
