--- a/_layouts/workshop.html
+++ b/_layouts/workshop.html
@@ -111,6 +111,10 @@ height="0" width="0" ></iframe></noscript>
 <img src="{{page.imageUrl}}" class="img-responsive mobile-only"/>
 <div class="workshop-title">
     <div class="container">
+        <span class="breadcrumbs">
+        <a href="/comaking">Workshops</a> / <span>{{page.title}}</span> 
+        </span>
+
     <h1>{{page.title}} <span>₱ {{page.earlyPrice}}</span></h1>
 
     {% if page.totalAttendees!= page.currentAttendees %}
