-updated payment.js -updated workshop dates and info

--- a/_includes/paymentModal.html
+++ b/_includes/paymentModal.html
@@ -18,7 +18,8 @@
                         <div id="paypal-button"></div>
                         <a class="btn gcash" data-toggle="modal" data-target="#gcashModal" >Pay with GCash</a>
                         <span class="paypal-charges"></span>
-
+                        <br>
+                        <span><i>*10% Cashback if you pay with GCash!</i></span>
                         
                       </div>
         </div>
