--- a/_layouts/workshop.html
+++ b/_layouts/workshop.html
@@ -69,7 +69,7 @@ height="0" width="0" ></iframe></noscript>
             </div>
             <div class="modal-body">
               <ol>
-                  <li>Deposit the amount to our <strong>BDO</strong> or <strong>Metrobank</strong> bank account: 
+                  <li>Deposit ₱{{page.earlyPrice}} per head to our <strong>BDO</strong> or <strong>Metrobank</strong> bank account: 
                       <br>
                       <p><strong>Metrobank Account Name:
                             CTT.Synergy Corporation
