optimized comaking page

--- a/_layouts/webinar.html
+++ b/_layouts/webinar.html
@@ -24,7 +24,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     
        <!-- For Facebook -->
 <meta property="og:title" content="{{page.pageTitle}}" />
-<meta property="og:image" content="{{page.imageUrl}}" />
+<meta property="og:image" content="{{page.imageUrl}}/main-sm.jpg" />
 <meta property="og:description" content="{{page.content | truncate: 195}}" />
 
 
@@ -107,8 +107,8 @@ height="0" width="0" ></iframe></noscript>
 
 
 
-<div class="workshop-page bg-img desktop-only" style="background-image: url(..{{page.imageUrl}})"></div>
-<img src="{{page.imageUrl}}" class="img-responsive mobile-only"/>
+<div class="workshop-page bg-img desktop-only" style="background-image: url(..{{page.imageUrl}}/main.jpg)"></div>
+<img src="{{page.imageUrl}}/main-sm.jpg" class="img-responsive mobile-only"/>
 <div class="workshop-title">
     <div class="container">
         <span class="breadcrumbs">
